# stm32-zephyr-ex

./: .gitignore  Makefile  platformio.ini
boards/: geekboard_pano_v03.json  stm32f103c6_blue.json
src/: main.c
zephyr/: CMakeLists.txt  prj.conf
zephyr/boards/: geekboard_pano_v03.overlay  stm32_min_dev.overlay  stm32f103c6_blue.overlay
zephyr/modules/boards/geekboard_pano_v03/: Kconfig.geekboard_pano_v03  board.yml  geekboard_pano_v03.dts  geekboard_pano_v03_defconfig  twister.yaml
zephyr/modules/boards/geekboard_pano_v03/support/: openocd.cfg
zephyr/modules/boards/stm32f103c6_blue/: Kconfig.stm32f103c6_blue  board.cmake  board.yml  stm32f103c6_blue.dts  twister.yaml
zephyr/modules/dts/st/f1/: stm32f103X6.dtsi
zephyr/modules/soc/: soc.yml
zephyr/modules/zephyr/: module.yml
